# quantum-agentics

./: LICENSE  README.md  requirements.txt  robots.txt  sample.env  test_quantum.py
.well-known/: agent-guide.md  agentic-guidance.json  agentics-manifest.json  (+5 more)
agents/qam_agent/: agent.py  crew.py  main.py  pyproject.toml
agents/qam_agent/config/: agents.yaml  tasks.yaml
agents/qam_agent/examples/: example_agent_run.py  example_azure_quantum_job.py  example_hybrid_scheduler.py  example_qaoa_optimization.py  example_quantum_task_manager.py  example_react_azure_quantum.py  example_react_bell_state.py  example_react_optimization.py  example_resource_allocation.py
agents/qam_agent/tests/: test_agent.py
agents/qam_agent/tools/: __init__.py  qam_tools.py
agents/quantum_training_agent/: IMPLEMENTATION_STATUS.md  PHASE_IMPLEMENTATION.md  README.md  __init__.py  agent.py  crew.py  main.py  pyproject.toml  qam_agent_output.json  requirements.txt
agents/quantum_training_agent/config/: agents.yaml  analysis.yaml  default_config.yaml  prompts.yaml  react_validation.py  tasks.yaml  training_config.py
agents/quantum_training_agent/docs/: README.md  api-configuration.md  api-evaluation.md  api-optimization.md  api-training.md  architecture.md  basic-concepts.md  installation.md  metrics.md  phd-analysis.md  quantum-optimization.md  quickstart.md  training-infrastructure.md  troubleshooting.md
agents/quantum_training_agent/examples/: example_agent_run.py
agents/quantum_training_agent/quantum_data/: quantum_problems.json  train.json
agents/quantum_training_agent/test_data/: eval.json
agents/quantum_training_agent/tests/: test_agent.py  test_data_generator.py  test_model_integration.py  test_trainer.py  test_training_config.py
agents/quantum_training_agent/tools/: __init__.py  custom_tool.py  data_generator.py  model_integration.py  trainer.py
(+85 files in other folders)
