[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "qam_agent"
version = "0.1.0"
authors = [
    { name = "QAM Team" },
]
description = "Quantum Agent Manager (QAM) Agent with ReACT methodology"
requires-python = ">=3.8"
dependencies = [
    "crewai[local]>=0.1.0",  # Use local backend instead of ChromaDB
    "langchain>=0.1.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.0",
    "httpx>=0.24.0",
    "numpy>=1.24.0"
]